# CMakeList.txt : CMake project for Tetris, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

project ("Tetris")

# Add source to this project's executable.
add_executable (Tetris "Tetris.cpp" "Tetris.h")

# TODO: Add tests and install targets if needed.
